--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Login_User</string>
+    <string name="default_web_client_id">668932188109-luvir7e2usphqs94hkhf79in0h2tvqqb.apps.googleusercontent.com</string>
+
 </resources>
